ie ag ag rules tests coverage
